Expanded metrics for http-requests and content stream
* Code improvements and bugfixes